# ML_Robotics

./: README.md
Final_project/: final_project.rviz  treasure_search2.ttt
Final_project/metal_detector/: CMakeLists.txt  package.xml  setup.py
Final_project/metal_detector/launch/: metal_detector_extract.launch  test.launch
Final_project/metal_detector/nodes/: metal_detector_extract.cpp  metal_detector_node.py
Final_project/metal_detector/src/metal_detector/: metal_detector_data.txt  particle_filter.py  reader.py
Final_project/shore_follower/: CMakeLists.txt
Final_project/shore_follower/launch/: fp_classify.launch
Final_project/shore_follower/models/nn/tensorboard/train/: events.out.tfevents.1607016027.raph-MacBookPro
Final_project/shore_follower/src/: shore_follower_drive.py  shore_follower_observe.cpp
Final_project/shore_follower2/: CMakeLists.txt  package.xml
Final_project/shore_follower2/launch/: fp_acquire.launch  fp_classify.launch
Final_project/shore_follower2/nn_part2/models/: best_model.data-00000-of-00001  best_model.index
Final_project/shore_follower2/nn_part2/tensorboard/train/: events.out.tfevents.1604659206.raph-MacBookPro
Final_project/shore_follower2/src/: shore_follower_drive.py
Final_project/vrep_vsv_driver/: CMakeLists.txt  mainpage.dox  package.xml  vsv_config.rviz
Final_project/vrep_vsv_driver/launch/: full.launch  height_control.launch  vsv_pc.launch
Final_project/vrep_vsv_driver/nodes/: arm_height_control.cpp  file.txt  teleop_base.py  teleop_geom.py  teleop_raw.py  vsv_arm.py  vsv_arm_ik.py  vsv_odom.py
cylinder_detection/: CMakeLists.txt  package.xml
cylinder_detection/launch/: fpr.launch
cylinder_detection/src/: cylinder_detection.cpp
floor_graph/nodes/: build_graph_2d.py  viz_graph-test.py  viz_graph.py  viz_graph_2d.py
floor_nav/: CMakeLists.txt
floor_nav/cfg/: TaskGoTo.cfg  TaskSetHeading.cfg  TaskWander.cfg
floor_nav/include/floor_nav/: SimTasksEnv.h
floor_nav/launch/: launch_turtlebot.launch  launch_vrep.launch
floor_nav/missions/: test_graph.py
floor_nav/src/: SimTasksEnv.cpp
floor_nav/tasks/: TaskGoTo.cpp  TaskGoTo.h  TaskSetHeading.cpp  TaskSetHeading.h  TaskWander.cpp
floor_plane_ceres/: CMakeLists.txt  package.xml
floor_plane_ceres/launch/: fpr.launch
floor_plane_ceres/src/: floor_plane_regression.cpp
floor_plane_hough/: CMakeLists.txt  package.xml
floor_plane_hough/launch/: fpr.launch
floor_plane_hough/src/: floor_plane_hough.cpp
floor_plane_mapping/: CMakeLists.txt  package.xml
floor_plane_mapping/launch/: floor_mapping.launch  full.launch  occ_grid.launch
floor_plane_mapping/src/: floor_mapping.cpp  traversability_occgrid.cpp
floor_plane_ransac/: CMakeLists.txt  package.xml
floor_plane_ransac/launch/: fpr.launch
floor_plane_ransac/src/: floor_plane_ransac.cpp
floor_plane_regression/: CMakeLists.txt  package.xml
floor_plane_regression/launch/: fpr.launch
floor_plane_regression/src/: floor_plane_regression.cpp
joy_commands/: CMakeLists.txt  package.xml
joy_commands/launch/: .joy_cpp.launch.swp  joy_cpp.launch  joy_py.launch
joy_commands/src/: teleop_joy_cpp.cpp  teleop_joy_py.py
shore_follower/launch/: fp_acquire.launch  fp_classify.launch
shore_follower/models/nn/models/: best_model.data-00000-of-00001  checkpoint
shore_follower/src/: shore_follower_drive.py
shore_follower2/launch/: fp_classify.launch
shore_follower2/models/nn/models/: best_model.index
shore_follower2/models/nn/tensorboard/val/: events.out.tfevents.1607016027.raph-MacBookPro
shore_follower2/nn_part2/tensorboard/val/: events.out.tfevents.1604659207.raph-MacBookPro
shore_follower2/src/: shore_follower_drive.py  shore_follower_observe.cpp
tp-deep-tensorflow/floor_plane_deep/: CMakeLists.txt  package.xml
tp-deep-tensorflow/floor_plane_deep/launch/: fp_acquire.launch  fp_classify.launch
tp-deep-tensorflow/floor_plane_deep/models/nn_part1_1/models/: best_model.data-00000-of-00001  best_model.index  checkpoint
tp-deep-tensorflow/floor_plane_deep/models/nn_part1_1/tensorboard/train/: events.out.tfevents.1604653533.raph-MacBookPro
tp-deep-tensorflow/floor_plane_deep/models/nn_part1_1/tensorboard/val/: events.out.tfevents.1604653534.raph-MacBookPro
tp-deep-tensorflow/floor_plane_deep/models/nn_part1_2/models/: best_model.data-00000-of-00001  best_model.index  checkpoint
tp-deep-tensorflow/floor_plane_deep/models/nn_part1_2/tensorboard/train/: events.out.tfevents.1605113094.raph-MacBookPro
tp-deep-tensorflow/floor_plane_deep/models/nn_part1_2/tensorboard/val/: events.out.tfevents.1605113094.raph-MacBookPro
tp-deep-tensorflow/floor_plane_deep/src/: .floor_plane_classifier.cpp.swp  floor_plane_classifier.py  floor_plane_extract.cpp
tp-deep-tensorflow/shore_follower/: package.xml
tp-deep-tensorflow/shore_follower/launch/: fp_acquire.launch  fp_classify.launch
tp-deep-tensorflow/shore_follower/models/nn_part2/models/: checkpoint
tp-deep-tensorflow/shore_follower/src/: shore_follower_drive.py  shore_follower_observe.cpp
tp-deep-tensorflow/tensorflow/: model.py  parser.py  reader.py  sampler.py  train.py
vrep4_helpers/: CMakeLists.txt  package.xml
vrep4_helpers/launch/: kinect_pc.launch
vrep4_helpers/src/: clock_repeat.cpp  image_flip.cpp  test_clock.py
vrep_ros_teleop/launch/: teleop_drone.launch  teleop_mux.launch
vrep_ros_teleop/src/: teleop_mux.py
vrep_vsv_driver/: CMakeLists.txt  setup.py  vsv_config.rviz
vrep_vsv_driver/launch/: height_control.launch  vsv.launch  vsv_geom.launch  vsv_ik.launch  vsv_odom.launch  vsv_pc.launch
vrep_vsv_driver/nodes/: teleop_geom.py  teleop_ik.py  vsv_driver.py
vrep_vsv_driver/src/vrep_vsv_driver/: arm_ik.py  vsv_kinematics.py
